recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:10: error: not found: value reculer
    reculer(length)
    ^